[workspace]
members = [
    "leptos-struct-table-macro",
    "leptos-struct-table",
    #"examples"
]
exclude = [
    "examples",
    "tests"
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Marc-Stefan Cassola"]
categories = ["gui", "web-programming"]
description = "Generate a complete batteries included leptos data table component from a struct definition."
exclude = ["examples/", "tests/"]
keywords = ["leptos", "table", "data-sheet", "data-grid"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Synphonyte/leptos-struct-table"